--- a/package.json
+++ b/package.json
@@ -65,6 +65,11 @@
         "command": "jira-plugin.browseMyIssues",
         "title": "My issue list...",
         "category": "JIRA"
+      },
+      {
+        "command": "jira-plugin.issueNewTransition",
+        "title": "Change issue status...",
+        "category": "JIRA"
       }
     ]
   },
