--- a/package.json
+++ b/package.json
@@ -59,6 +59,11 @@
           "type": "string",
           "description": "JIRA working project",
           "default": ""
+        },
+        "jira-plugin.enableWorkingIssue": {
+          "type": "boolean",
+          "description": "Enable working issue functionality in status bar",
+          "default": "true"
         }
       }
     },
