--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test",
-    "precommit": "npm test"
+    "test": "npm run compile && node ./node_modules/vscode/bin/test"
   },
   "contributes": {
     "configuration": {
@@ -196,7 +195,6 @@
   "devDependencies": {
     "@types/mocha": "^5.2.4",
     "@types/node": "^10.5.2",
-    "husky": "^0.14.3",
     "mocha": "^5.2.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2",
