--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   ],
   "main": "./out/src/extension",
   "scripts": {
-    "clean-folder": "rm -rf ./out",
-    "vscode:prepublish": "npm run test",
+    "clean": "rm -rf ./out",
+    "vscode:prepublish": "npm run clean && npm run test",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
