**feat** added and managed worklog minimum tracking time
This setting is the minimum tracking time for show the Worklog modal and create Jira worklog

--- a/package.json
+++ b/package.json
@@ -74,6 +74,11 @@
             "vsCodeFocus"
           ],
           "default": "always"
+        },
+        "jira-plugin.worklogMinimumTrackingTime": {
+          "type": "integer",
+          "description": "Minimum tracking time for create Jira worklog",
+          "default": 0
         }
       }
     },
