--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jira-plugin",
   "displayName": "Jira Plugin",
   "description": "JIRA integration for vscode",
-  "version": "0.5.2",
+  "version": "0.6.0",
   "publisher": "gioboa",
   "icon": "images/icons/icon.png",
   "galleryBanner": {
@@ -83,7 +83,7 @@
         },
         "jira-plugin.worklogMinimumTrackingTime": {
           "type": "integer",
-          "description": "Minimum tracking time for create Jira worklog",
+          "description": "Minimum tracking time for show the Worklog modal and create Jira worklog",
           "default": 0
         }
       }
