--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "test": "npm run compile && node ./node_modules/vscode/bin/test",
+    "lint": "tslint 'src/app/**/*.ts' --format stylish --fix"
   },
   "contributes": {
     "configuration": {
@@ -223,7 +224,6 @@
   },
   "dependencies": {
     "decko": "^1.2.0",
-    "isomorphic-fetch": "2.2.1",
-    "pretend": "^1.5.1"
+    "jira-connector": "^2.8.0"
   }
 }
