--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
       "properties": {
         "jira-plugin.baseUrl": {
           "type": "string",
-          "description": "Your JIRA base URL (e.g. https://your_jira_base_url.com)",
+          "description": "Your JIRA base URL (e.g. https://your_jira_base_url.com or http://your_jira_base_url.com:your_port)",
           "default": ""
         },
         "jira-plugin.username": {
