--- a/package.json
+++ b/package.json
@@ -258,6 +258,7 @@
     }
   },
   "devDependencies": {
+    "@types/copy-paste": "^1.1.30",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.5.7",
     "mocha": "^5.2.0",
